# download

./: Cargo.toml
src/: main.rs
target1/minetest-5.6.0-win64/locale/be/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/bg/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/ca/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/cs/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/da/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/de/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/el/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/eo/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/es/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/et/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/eu/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/fi/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/fil/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/fr/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/gd/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/gl/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/hu/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/id/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/it/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/ja/LC_MESSAGES/: minetest.mo
target1/minetest-5.6.0-win64/locale/ko/LC_MESSAGES/: minetest.mo
(+22 files in other folders)
